Implement user role security for request and response DTOs