@@ -11,6 +11,7 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.MediaType;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.util.AntPathMatcher;
@@ -19,6 +20,7 @@ import org.springframework.web.filter.OncePerRequestFilter;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 
 @Slf4j
@@ -42,7 +44,7 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
                 || "OPTIONS".equalsIgnoreCase(request.getMethod());
     }
 
-    @Override
+	@Override
     protected void doFilterInternal(HttpServletRequest request,
                                     HttpServletResponse response,
                                     FilterChain chain)
@@ -73,6 +75,7 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
                 String email = jwtUtil.extractEmail(token);
                 String tokenSid = jwtUtil.extractSid(token);
                 String userKey = jwtUtil.extractUserKey(token);
+                String role = jwtUtil.extractRole(token);
 
                 if (email == null || tokenSid == null) {
                     unauthorized(response, ResponseCode.AUTH_SESSION_REVOKED);
@@ -89,7 +92,18 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
                 }
 
                 // 2d) All good → set Authentication (principal=email)
-                var auth = new UsernamePasswordAuthenticationToken(email, null, Collections.emptyList());
+                List<GrantedAuthority> authorities = Collections.emptyList();
+                if (role != null) {                	
+                	authorities = List.of(new GrantedAuthority () {
+            			@Override
+            			public String getAuthority() {
+            				return role;
+            			}
+            		});
+                }
+                        
+                @SuppressWarnings("serial")
+				var auth = new UsernamePasswordAuthenticationToken(email, null, authorities);
                 auth.setDetails(Map.of(
                         "user_key", userKey,
                         "sid", tokenSid));
